add production url

--- a/config/app.yml
+++ b/config/app.yml
@@ -1,8 +1,12 @@
 ---
 development:
   API_URL: http://localhost:9292/api/v0.1
-  # APP_URL: http://localhost:3000
+  APP_URL: http://localhost:3000
 
 test:
   API_URL: http://localhost:9292/api/v0.1
-  # APP_URL: http://localhost:3000
+  APP_URL: http://localhost:3000
+
+production:
+  API_URL: https://talkup-api.herokuapp.com/
+  APP_URL: https://talkup-app.herokuapp.com/
