github oauth sso

--- a/config/app.yml
+++ b/config/app.yml
@@ -2,6 +2,9 @@
 development:
   API_URL: http://localhost:9292/api/v0.1
   APP_URL: http://localhost:3000
+  GH_OAUTH_URL: https://github.com/login/oauth/authorize
+  GH_SCOPE: user:email
+  GH_TOKEN_URL: https://github.com/login/oauth/access_token
 
 test:
   API_URL: http://localhost:9292/api/v0.1
